--- a/src/main/resources/templates/index_patient.html
+++ b/src/main/resources/templates/index_patient.html
@@ -26,11 +26,15 @@
                     <div class="col s1">
                         <div class="row">
                             <div class="col s6">
-                                <a href="/patient" class="btn-floating btn-large waves-effect waves-light blue"><i
+                                <a href="/patient"
+                                   class="tooltipped btn-floating btn-large waves-effect waves-light blue"
+                                   data-tooltip="Limpar os filtros"><i
                                         class="material-icons">clear_all</i></a>
                             </div>
                             <div class="col s6">
-                                <button type="submit" class="btn-floating btn-large waves-effect waves-light blue"><i
+                                <button type="submit"
+                                        class="tooltipped btn-floating btn-large waves-effect waves-light blue"
+                                        data-tooltip="Buscar os pacientes pelos trechos de CPF e nome informados"><i
                                         class="material-icons">done</i></button>
                             </div>
                         </div>
@@ -43,7 +47,8 @@
                     <th>Código</th>
                     <th>Nome</th>
                     <th>Sobrenome</th>
-                    <th><a href="/patient/new" class="btn-floating btn-small waves-effect waves-light blue"><i
+                    <th><a href="/patient/new" class="tooltipped btn-floating btn-small waves-effect waves-light blue"
+                           data-tooltip="Abrir a tela de cadastro de um novo paciente"><i
                             class="material-icons">add</i></a>
                     </th>
                 </tr>
@@ -54,13 +59,16 @@
                     <td><span th:text="${patient.name}"></span></td>
                     <td><span th:text="${patient.surname}"></span></td>
                     <td>
-                        <a class="btn-floating btn-small waves-effect waves-light blue delete"
+                        <a class="btn-floating btn-small waves-effect waves-light blue delete tooltipped"
+                           th:data-tooltip="${'Inativar o cadastro do paciente ' + patient.name}"
                            th:data-url="${(#mvc.url('PC#deletePatient').arg(0, patient.id)).build()}"><i
                                 class="material-icons">delete</i></a>
-                        <a class="btn-floating btn-small waves-effect waves-light blue"
+                        <a class="btn-floating btn-small waves-effect waves-light blue tooltipped"
+                           th:data-tooltip="${'Abrir a tela de edição dos dados do paciente ' + patient.name}"
                            th:href="${(#mvc.url('PC#editPatient').arg(0, patient.id)).build()}"><i
                                 class="material-icons">edit</i></a>
-                        <a class="btn-floating btn-small waves-effect waves-light blue" target="_blank"
+                        <a class="btn-floating btn-small waves-effect waves-light blue tooltipped"
+                           th:data-tooltip="${'Imprimir a ficha do paciente ' + patient.name}" target="_blank"
                            th:href="${'/report/patient-registry/' + patient.id}"><i
                                 class="material-icons">local_printshop</i></a>
                     </td>
